--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-minecraft_version=1.20.2
-forge_version=48.0.31
-curios_version=6.0.1+1.20.2
+minecraft_version=1.19.2
+forge_version=43.3.2
+curios_version=1.19.2-5.1.4.1
