--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-minecraft_version=1.20.2
-forge_version=48.0.31
-curios_version=6.0.1+1.20.2
+minecraft_version=1.20.1
+forge_version=47.1.3
+curios_version=5.2.0-beta.3+1.20.1
