--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-minecraft_version=1.20.1
-forge_version=47.1.3
-curios_version=5.2.0-beta.3+1.20.1
+minecraft_version=1.20.4
+forge_version=49.0.30
+curios_version=7.3.1+1.20.4
