--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ neogradle.subsystems.parchment.mappingsVersion=2023.12.31
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=paimon
 # The human-readable display name for the mod.
-mod_name=paimon
+mod_name=Paimon
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All-Rights-Reserved
 # The mod version. See https://semver.org/
